--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
