--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cd src && node index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "license": "MIT",
   "dependencies": {
@@ -15,7 +16,10 @@
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@types/jest": "^29.5.14",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
