--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,11 +56,11 @@ jobs:
               url: 'https://pizza-factory.cs329.click',
               apiKey: '${{ secrets.FACTORY_API_KEY }}',
             },
-            metrics: {
-              source: 'jwt-pizza-service',
-              url: '${{ secrets.METRICS_URL }}',
-              apiKey: '${{ secrets.METRICS_API_KEY }}',
-            },  
+            # metrics: {
+            #   source: 'jwt-pizza-service',
+            #   url: '${{ secrets.METRICS_URL }}',
+            #   apiKey: '${{ secrets.METRICS_API_KEY }}',
+            # },  
             logging: {
                 source: 'jwt-pizza-service',
                 userId: ${{ secrets.LOGGING_USER_ID }},
